@@ -18,8 +18,6 @@
  */
 package org.apache.syncope.client.console.pages;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import org.apache.commons.collections4.CollectionUtils;
@@ -47,9 +45,7 @@ public class Audit extends BasePage {
 
         body.add(BookmarkablePageLinkBuilder.build("dashboard", "dashboardBr", Dashboard.class));
 
-        final LoggerRestClient loggerRestClient = new LoggerRestClient();
-
-        List<String> events = loggerRestClient.listAudits().stream().
+        List<String> events = LoggerRestClient.listAudits().stream().
                 map(audit -> AuditLoggerName.buildEvent(
                 audit.getType(),
                 audit.getCategory(),
@@ -66,20 +62,19 @@ public class Audit extends BasePage {
 
         form.add(new EventCategoryPanel(
                 "auditPanel",
-                loggerRestClient.listEvents(),
+                LoggerRestClient.listEvents(),
                 new ListModel<>(events)) {
 
             private static final long serialVersionUID = 6113164334533550277L;
 
             @Override
             protected List<String> getListAuthRoles() {
-                return Collections.singletonList(IdRepoEntitlement.AUDIT_LIST);
+                return List.of(IdRepoEntitlement.AUDIT_LIST);
             }
 
             @Override
             protected List<String> getChangeAuthRoles() {
-                return Arrays.asList(
-                        new String[] { IdRepoEntitlement.AUDIT_ENABLE, IdRepoEntitlement.AUDIT_DISABLE });
+                return List.of(IdRepoEntitlement.AUDIT_ENABLE, IdRepoEntitlement.AUDIT_DISABLE);
             }
 
             @Override
@@ -100,7 +95,7 @@ public class Audit extends BasePage {
                                 ? null : eventCategory.getKey().getEvents().iterator().next(),
                                 eventCategory.getValue());
 
-                        loggerRestClient.disableAudit(auditLoggerName);
+                        LoggerRestClient.disableAudit(auditLoggerName);
                     });
 
                     eventSelectionChanged.getToBeAdded().forEach(toBeAdded -> {
@@ -115,7 +110,7 @@ public class Audit extends BasePage {
                                 ? null : eventCategory.getKey().getEvents().iterator().next(),
                                 eventCategory.getValue());
 
-                        loggerRestClient.enableAudit(auditLoggerName);
+                        LoggerRestClient.enableAudit(auditLoggerName);
                     });
                 }
             }
