@@ -18,8 +18,7 @@
  */
 package org.apache.syncope.client.console.panels;
 
-import java.util.Arrays;
-import org.apache.commons.lang3.StringUtils;
+import java.util.List;
 import org.apache.syncope.client.console.SyncopeConsoleSession;
 import org.apache.syncope.client.console.pages.BasePage;
 import org.apache.syncope.client.console.wicket.markup.html.bootstrap.dialog.BaseModal;
@@ -52,7 +51,7 @@ public class DomainAdminCredentialsPanel extends AbstractModalPanel<Domain> {
         AjaxDropDownChoicePanel<CipherAlgorithm> adminCipherAlgorithm = new AjaxDropDownChoicePanel<>(
                 "adminCipherAlgorithm", "adminCipherAlgorithm",
                 new PropertyModel<>(domain, "adminCipherAlgorithm"), false);
-        adminCipherAlgorithm.setChoices(Arrays.asList(CipherAlgorithm.values()));
+        adminCipherAlgorithm.setChoices(List.of(CipherAlgorithm.values()));
         adminCipherAlgorithm.addRequiredLabel();
         adminCipherAlgorithm.setNullValid(false);
         add(adminCipherAlgorithm);
@@ -77,8 +76,7 @@ public class DomainAdminCredentialsPanel extends AbstractModalPanel<Domain> {
             this.modal.close(target);
         } catch (Exception e) {
             LOG.error("While updating domain", e);
-            SyncopeConsoleSession.get().error(
-                    StringUtils.isBlank(e.getMessage()) ? e.getClass().getName() : e.getMessage());
+            SyncopeConsoleSession.get().onException(e);
         }
         ((BasePage) pageRef.getPage()).getNotificationPanel().refresh(target);
     }
