@@ -18,7 +18,6 @@
  */
 package org.apache.syncope.client.console.rest;
 
-import java.util.Collections;
 import java.util.List;
 import org.apache.syncope.common.lib.SyncopeClientException;
 import org.apache.syncope.common.lib.to.RelationshipTypeTO;
@@ -28,24 +27,24 @@ public class RelationshipTypeRestClient extends BaseRestClient {
 
     private static final long serialVersionUID = -5400007385180229980L;
 
-    public void create(final RelationshipTypeTO relationshipType) {
+    public static void create(final RelationshipTypeTO relationshipType) {
         getService(RelationshipTypeService.class).create(relationshipType);
     }
 
-    public void update(final RelationshipTypeTO relationshipType) {
+    public static void update(final RelationshipTypeTO relationshipType) {
         getService(RelationshipTypeService.class).update(relationshipType);
     }
 
-    public void delete(final String key) {
+    public static void delete(final String key) {
         getService(RelationshipTypeService.class).delete(key);
     }
 
-    public RelationshipTypeTO read(final String key) {
+    public static RelationshipTypeTO read(final String key) {
         return getService(RelationshipTypeService.class).read(key);
     }
 
-    public List<RelationshipTypeTO> list() {
-        List<RelationshipTypeTO> types = Collections.emptyList();
+    public static List<RelationshipTypeTO> list() {
+        List<RelationshipTypeTO> types = List.of();
 
         try {
             types = getService(RelationshipTypeService.class).list();
