@@ -20,11 +20,11 @@ package org.apache.syncope.core.persistence.jpa.dao;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.regex.Pattern;
@@ -34,17 +34,16 @@ import javax.persistence.NoResultException;
 import javax.persistence.PersistenceException;
 import javax.persistence.Query;
 import javax.persistence.TypedQuery;
-import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.syncope.common.lib.SyncopeConstants;
 import org.apache.syncope.common.lib.types.AnyTypeKind;
 import org.apache.syncope.common.lib.types.EntityViolationType;
 import org.apache.syncope.common.lib.types.IdRepoEntitlement;
+import org.apache.syncope.core.persistence.api.entity.Relationship;
 import org.apache.syncope.core.spring.security.AuthContextUtils;
 import org.apache.syncope.core.spring.security.DelegatedAdministrationException;
 import org.apache.syncope.core.persistence.api.attrvalue.validation.InvalidEntityException;
 import org.apache.syncope.core.persistence.api.dao.AccessTokenDAO;
-import org.apache.syncope.core.persistence.api.dao.AccountRule;
 import org.apache.syncope.core.persistence.api.dao.GroupDAO;
 import org.apache.syncope.core.persistence.api.dao.RealmDAO;
 import org.apache.syncope.core.persistence.api.dao.RoleDAO;
@@ -53,15 +52,18 @@ import org.apache.syncope.core.persistence.api.entity.AccessToken;
 import org.apache.syncope.core.persistence.api.entity.AnyUtils;
 import org.apache.syncope.core.persistence.api.entity.Entity;
 import org.apache.syncope.core.persistence.api.entity.Implementation;
+import org.apache.syncope.core.persistence.api.entity.Privilege;
 import org.apache.syncope.core.persistence.api.entity.Realm;
 import org.apache.syncope.core.persistence.api.entity.Role;
 import org.apache.syncope.core.persistence.api.entity.group.Group;
 import org.apache.syncope.core.persistence.api.entity.policy.AccountPolicy;
 import org.apache.syncope.core.persistence.api.entity.policy.PasswordPolicy;
 import org.apache.syncope.core.persistence.api.entity.resource.ExternalResource;
+import org.apache.syncope.core.persistence.api.entity.user.LinkedAccount;
 import org.apache.syncope.core.persistence.api.entity.user.SecurityQuestion;
 import org.apache.syncope.core.persistence.api.entity.user.UMembership;
 import org.apache.syncope.core.persistence.api.entity.user.User;
+import org.apache.syncope.core.persistence.jpa.entity.user.JPALinkedAccount;
 import org.apache.syncope.core.persistence.jpa.entity.user.JPAUMembership;
 import org.apache.syncope.core.persistence.jpa.entity.user.JPAUser;
 import org.apache.syncope.core.provisioning.api.event.AnyCreatedUpdatedEvent;
@@ -77,7 +79,7 @@ import org.springframework.transaction.annotation.Transactional;
 public class JPAUserDAO extends AbstractAnyDAO<User> implements UserDAO {
 
     protected static final Pattern USERNAME_PATTERN =
-            Pattern.compile("^" + SyncopeConstants.NAME_PATTERN, Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE);
+            Pattern.compile('^' + SyncopeConstants.NAME_PATTERN, Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE);
 
     protected static final Encryptor ENCRYPTOR = Encryptor.getInstance();
 
@@ -157,12 +159,12 @@ public class JPAUserDAO extends AbstractAnyDAO<User> implements UserDAO {
             Map<String, Set<String>> authorizations = AuthContextUtils.getAuthorizations();
             Set<String> authRealms = authorizations.containsKey(IdRepoEntitlement.USER_READ)
                     ? authorizations.get(IdRepoEntitlement.USER_READ)
-                    : Collections.emptySet();
+                    : Set.of();
             boolean authorized = authRealms.stream().
                     anyMatch(realm -> user.getRealm().getFullPath().startsWith(realm));
             if (!authorized) {
                 authorized = findDynRealms(user.getKey()).stream().
-                        filter(dynRealm -> authRealms.contains(dynRealm)).
+                        filter(authRealms::contains).
                         count() > 0;
             }
             if (authRealms.isEmpty() || !authorized) {
@@ -255,20 +257,24 @@ public class JPAUserDAO extends AbstractAnyDAO<User> implements UserDAO {
         return query.getResultList();
     }
 
+    public List<String> findAllKeys(final int page, final int itemsPerPage) {
+        return findAllKeys(JPAUser.TABLE, page, itemsPerPage);
+    }
+
     protected List<AccountPolicy> getAccountPolicies(final User user) {
         List<AccountPolicy> policies = new ArrayList<>();
 
         // add resource policies
         findAllResources(user).stream().
-                map(resource -> resource.getAccountPolicy()).
-                filter(policy -> policy != null).
-                forEachOrdered(policy -> policies.add(policy));
+                map(ExternalResource::getAccountPolicy).
+                filter(Objects::nonNull).
+                forEachOrdered(policies::add);
 
         // add realm policies
         realmDAO.findAncestors(user.getRealm()).stream().
-                map(realm -> realm.getAccountPolicy()).
-                filter(policy -> policy != null).
-                forEachOrdered(policy -> policies.add(policy));
+                map(Realm::getAccountPolicy).
+                filter(Objects::nonNull).
+                forEachOrdered(policies::add);
 
         return policies;
     }
@@ -289,7 +295,13 @@ public class JPAUserDAO extends AbstractAnyDAO<User> implements UserDAO {
                 }
 
                 for (Implementation impl : policy.getRules()) {
-                    ImplementationManager.buildPasswordRule(impl).ifPresent(rule -> rule.enforce(user));
+                    ImplementationManager.buildPasswordRule(impl).ifPresent(rule -> {
+                        rule.enforce(user);
+
+                        user.getLinkedAccounts().stream().
+                                filter(account -> account.getPassword() != null).
+                                forEach(account -> rule.enforce(account));
+                    });
                 }
 
                 boolean matching = false;
@@ -349,15 +361,25 @@ public class JPAUserDAO extends AbstractAnyDAO<User> implements UserDAO {
             }
 
             if (!USERNAME_PATTERN.matcher(user.getUsername()).matches()) {
-                throw new AccountPolicyException("Character(s) not allowed");
+                throw new AccountPolicyException("Character(s) not allowed: " + user.getUsername());
             }
+            user.getLinkedAccounts().stream().
+                    filter(account -> account.getUsername() != null).
+                    forEach(account -> {
+                        if (!USERNAME_PATTERN.matcher(account.getUsername()).matches()) {
+                            throw new AccountPolicyException("Character(s) not allowed: " + account.getUsername());
+                        }
+                    });
 
             for (AccountPolicy policy : getAccountPolicies(user)) {
                 for (Implementation impl : policy.getRules()) {
-                    Optional<AccountRule> rule = ImplementationManager.buildAccountRule(impl);
-                    if (rule.isPresent()) {
-                        rule.get().enforce(user);
-                    }
+                    ImplementationManager.buildAccountRule(impl).ifPresent(rule -> {
+                        rule.enforce(user);
+
+                        user.getLinkedAccounts().stream().
+                                filter(account -> account.getUsername() != null).
+                                forEach(account -> rule.enforce(account));
+                    });
                 }
 
                 suspend |= user.getFailedLogins() != null && policy.getMaxAuthenticationAttempts() > 0
@@ -371,7 +393,7 @@ public class JPAUserDAO extends AbstractAnyDAO<User> implements UserDAO {
             throw new InvalidEntityException(User.class, EntityViolationType.InvalidUsername, e.getMessage());
         }
 
-        return ImmutablePair.of(suspend, propagateSuspension);
+        return Pair.of(suspend, propagateSuspension);
     }
 
     protected Pair<User, Pair<Set<String>, Set<String>>> doSave(final User user) {
@@ -488,7 +510,7 @@ public class JPAUserDAO extends AbstractAnyDAO<User> implements UserDAO {
     public Collection<Group> findAllGroups(final User user) {
         Set<Group> result = new HashSet<>();
         result.addAll(user.getMemberships().stream().
-                map(membership -> membership.getRightEnd()).collect(Collectors.toSet()));
+                map(Relationship::getRightEnd).collect(Collectors.toSet()));
         result.addAll(findDynGroups(user.getKey()));
 
         return result;
@@ -520,5 +542,59 @@ public class JPAUserDAO extends AbstractAnyDAO<User> implements UserDAO {
     @Override
     public Collection<String> findAllResourceKeys(final String key) {
         return findAllResources(authFind(key)).stream().map(Entity::getKey).collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    @Override
+    public boolean linkedAccountExists(final String userKey, final String connObjectKeyValue) {
+        Query query = entityManager().createNativeQuery(
+                "SELECT id FROM " + JPALinkedAccount.TABLE + " WHERE owner_id=? AND connObjectKeyValue=?");
+        query.setParameter(1, userKey);
+        query.setParameter(2, connObjectKeyValue);
+
+        return !query.getResultList().isEmpty();
+    }
+
+    @Override
+    public Optional<? extends LinkedAccount> findLinkedAccount(
+            final ExternalResource resource, final String connObjectKeyValue) {
+
+        TypedQuery<LinkedAccount> query = entityManager().createQuery(
+                "SELECT e FROM " + JPALinkedAccount.class.getSimpleName() + " e "
+                + "WHERE e.resource=:resource AND e.connObjectKeyValue=:connObjectKeyValue", LinkedAccount.class);
+        query.setParameter("resource", resource);
+        query.setParameter("connObjectKeyValue", connObjectKeyValue);
+
+        List<LinkedAccount> result = query.getResultList();
+        return query.getResultList().isEmpty() ? Optional.empty() : Optional.of(result.get(0));
+    }
+
+    @Transactional(readOnly = true)
+    @Override
+    public List<LinkedAccount> findLinkedAccounts(final String userKey) {
+        TypedQuery<LinkedAccount> query = entityManager().createQuery(
+                "SELECT e FROM " + JPALinkedAccount.class.getSimpleName() + " e "
+                + "WHERE e.owner.id=:userKey", LinkedAccount.class);
+        query.setParameter("userKey", userKey);
+        return query.getResultList();
+    }
+
+    @Override
+    public List<LinkedAccount> findLinkedAccountsByPrivilege(final Privilege privilege) {
+        TypedQuery<LinkedAccount> query = entityManager().createQuery(
+                "SELECT e FROM " + JPALinkedAccount.class.getSimpleName() + " e "
+                + "WHERE :privilege MEMBER OF e.privileges", LinkedAccount.class);
+        query.setParameter("privilege", privilege);
+        return query.getResultList();
+    }
+
+    @Override
+    public List<LinkedAccount> findLinkedAccountsByResource(final ExternalResource resource) {
+        TypedQuery<LinkedAccount> query = entityManager().createQuery(
+                "SELECT e FROM " + JPALinkedAccount.class.getSimpleName() + " e "
+                + "WHERE e.resource=:resource", LinkedAccount.class);
+        query.setParameter("resource", resource);
+
+        return query.getResultList();
     }
 }
