@@ -20,9 +20,9 @@ package org.apache.syncope.core.persistence.jpa.entity;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 import javax.persistence.CascadeType;
 import javax.persistence.CollectionTable;
@@ -185,7 +185,7 @@ public class JPAConnInstance extends AbstractGeneratedKeyEntity implements ConnI
     public Set<ConnConfProperty> getConf() {
         Set<ConnConfProperty> configuration = new HashSet<>();
         if (!StringUtils.isBlank(jsonConf)) {
-            configuration.addAll(Arrays.asList(POJOHelper.deserialize(jsonConf, ConnConfProperty[].class)));
+            configuration.addAll(List.of(POJOHelper.deserialize(jsonConf, ConnConfProperty[].class)));
         }
 
         return configuration;
@@ -228,7 +228,7 @@ public class JPAConnInstance extends AbstractGeneratedKeyEntity implements ConnI
         // DEFAULT_TIMEOUT will be returned in case of null timeout:
         // * instances created by the content loader
         // * or with a timeout nullified explicitely
-        return connRequestTimeout == null ? DEFAULT_TIMEOUT : connRequestTimeout;
+        return Optional.ofNullable(connRequestTimeout).orElse(DEFAULT_TIMEOUT);
     }
 
     @Override
