@@ -19,7 +19,6 @@
 package org.apache.syncope.client.console.panels;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import org.apache.syncope.client.console.wicket.markup.html.form.MultiFieldPanel;
@@ -329,8 +328,8 @@ public class SCIMConfUserPanel extends SCIMConfTabPanel {
             final String baseTabId,
             final T canonicalType) {
 
-        Accordion accordion = new Accordion(basePanelId + "_" + complex.getType().name(),
-                Collections.<ITab>singletonList(new AbstractTab(Model.of(baseTabId + "." + complex.getType().name())) {
+        Accordion accordion = new Accordion(basePanelId + '_' + complex.getType().name(),
+                Collections.<ITab>singletonList(new AbstractTab(Model.of(baseTabId + '.' + complex.getType().name())) {
 
                     private static final long serialVersionUID = -5861786415855103549L;
 
@@ -470,7 +469,7 @@ public class SCIMConfUserPanel extends SCIMConfTabPanel {
             final String panelId) {
 
         final List<AjaxTextFieldPanel> panelList = new ArrayList<>();
-        final String fieldName = panelId + "." + canonicalType.name();
+        final String fieldName = panelId + '.' + canonicalType.name();
 
         AjaxTextFieldPanel displayPanel = new AjaxTextFieldPanel("accordionContent", fieldName + ".display",
                 new PropertyModel<String>(complex, "accordionContent") {
@@ -524,7 +523,7 @@ public class SCIMConfUserPanel extends SCIMConfTabPanel {
             }
 
         });
-        primaryPanel.setChoices(Arrays.asList("true", "false"));
+        primaryPanel.setChoices(List.of("true", "false"));
 
         panelList.add(displayPanel);
         panelList.add(valuePanel);
@@ -648,7 +647,7 @@ public class SCIMConfUserPanel extends SCIMConfTabPanel {
             }
 
         });
-        addressPrimaryPanel.setChoices(Arrays.asList("true", "false"));
+        addressPrimaryPanel.setChoices(List.of("true", "false"));
 
         panelList.add(addressCountryPanel);
         panelList.add(addressFormattedPanel);
