@@ -19,8 +19,6 @@
 package org.apache.syncope.core.logic;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -40,11 +38,9 @@ import org.apache.syncope.common.lib.to.UserTO;
 import org.apache.syncope.core.logic.scim.SCIMConfManager;
 import org.apache.syncope.core.persistence.api.dao.AnyDAO;
 import org.apache.syncope.core.persistence.api.dao.search.MembershipCond;
-import org.apache.syncope.core.persistence.api.dao.search.OrderByClause;
 import org.apache.syncope.core.persistence.api.dao.search.SearchCond;
 import org.apache.syncope.core.spring.security.AuthDataAccessor;
 import org.apache.syncope.ext.scimv2.api.BadRequestException;
-import org.apache.syncope.ext.scimv2.api.data.Value;
 import org.apache.syncope.ext.scimv2.api.data.Group;
 import org.apache.syncope.ext.scimv2.api.data.Member;
 import org.apache.syncope.ext.scimv2.api.data.Meta;
@@ -55,6 +51,7 @@ import org.apache.syncope.ext.scimv2.api.data.SCIMUser;
 import org.apache.syncope.ext.scimv2.api.data.SCIMUserAddress;
 import org.apache.syncope.ext.scimv2.api.data.SCIMUserManager;
 import org.apache.syncope.ext.scimv2.api.data.SCIMUserName;
+import org.apache.syncope.ext.scimv2.api.data.Value;
 import org.apache.syncope.ext.scimv2.api.type.ErrorType;
 import org.apache.syncope.ext.scimv2.api.type.Function;
 import org.apache.syncope.ext.scimv2.api.type.Resource;
@@ -68,12 +65,12 @@ public class SCIMDataBinder {
 
     protected static final Logger LOG = LoggerFactory.getLogger(SCIMDataBinder.class);
 
-    private static final List<String> USER_SCHEMAS = Collections.singletonList(Resource.User.schema());
+    private static final List<String> USER_SCHEMAS = List.of(Resource.User.schema());
 
     private static final List<String> ENTERPRISE_USER_SCHEMAS =
-            Arrays.asList(Resource.User.schema(), Resource.EnterpriseUser.schema());
+            List.of(Resource.User.schema(), Resource.EnterpriseUser.schema());
 
-    private static final List<String> GROUP_SCHEMAS = Collections.singletonList(Resource.Group.schema());
+    private static final List<String> GROUP_SCHEMAS = List.of(Resource.Group.schema());
 
     @Autowired
     private SCIMConfManager confManager;
@@ -84,10 +81,10 @@ public class SCIMDataBinder {
     @Autowired
     private AuthDataAccessor authDataAccessor;
 
-    private <E extends Enum<?>> void fill(
-            final Map<String, Attr> attrs,
-            final List<SCIMComplexConf<E>> confs,
-            final List<SCIMComplexValue> values) {
+    private static <E extends Enum<?>> void fill(
+        final Map<String, Attr> attrs,
+        final List<SCIMComplexConf<E>> confs,
+        final List<SCIMComplexValue> values) {
 
         confs.forEach(conf -> {
             SCIMComplexValue value = new SCIMComplexValue();
@@ -111,20 +108,20 @@ public class SCIMDataBinder {
         });
     }
 
-    private boolean output(
-            final List<String> attributes,
-            final List<String> excludedAttributes,
-            final String schema) {
+    private static boolean output(
+        final List<String> attributes,
+        final List<String> excludedAttributes,
+        final String schema) {
 
         return (attributes.isEmpty() || attributes.contains(schema))
                 && (excludedAttributes.isEmpty() || !excludedAttributes.contains(schema));
     }
 
-    private <T> T output(
-            final List<String> attributes,
-            final List<String> excludedAttributes,
-            final String schema,
-            final T value) {
+    private static <T> T output(
+        final List<String> attributes,
+        final List<String> excludedAttributes,
+        final String schema,
+        final T value) {
 
         return output(attributes, excludedAttributes, schema)
                 ? value
@@ -299,11 +296,10 @@ public class SCIMDataBinder {
                 });
             }
             if (output(attributes, excludedAttributes, "x509Certificates")) {
-                conf.getUserConf().getX509Certificates().stream().
-                        filter(certificate -> attrs.containsKey(certificate)).
-                        forEachOrdered(certificate -> {
-                            user.getX509Certificates().add(new Value(attrs.get(certificate).getValues().get(0)));
-                        });
+                conf.getUserConf().getX509Certificates().stream()
+                        .filter(attrs::containsKey)
+                        .forEachOrdered(certificate -> user.getX509Certificates().add(
+                        new Value(attrs.get(certificate).getValues().get(0))));
             }
 
             if (conf.getEnterpriseUserConf() != null) {
@@ -390,43 +386,35 @@ public class SCIMDataBinder {
             }
 
             if (output(attributes, excludedAttributes, "groups")) {
-                userTO.getMemberships().forEach(membership -> {
-                    user.getGroups().add(new Group(
-                            membership.getGroupKey(),
-                            StringUtils.substringBefore(location, "/Users") + "/Groups/" + membership.getGroupKey(),
-                            membership.getGroupName(),
-                            Function.direct));
-                });
-                userTO.getDynMemberships().forEach(membership -> {
-                    user.getGroups().add(new Group(
-                            membership.getGroupKey(),
-                            StringUtils.substringBefore(location, "/Users") + "/Groups/" + membership.getGroupKey(),
-                            membership.getGroupName(),
-                            Function.indirect));
-                });
+                userTO.getMemberships().forEach(membership -> user.getGroups().add(new Group(
+                        membership.getGroupKey(),
+                        StringUtils.substringBefore(location, "/Users") + "/Groups/" + membership.getGroupKey(),
+                        membership.getGroupName(),
+                        Function.direct)));
+                userTO.getDynMemberships().forEach(membership -> user.getGroups().add(new Group(
+                        membership.getGroupKey(),
+                        StringUtils.substringBefore(location, "/Users") + "/Groups/" + membership.getGroupKey(),
+                        membership.getGroupName(),
+                        Function.indirect)));
             }
 
             if (output(attributes, excludedAttributes, "entitlements")) {
-                authDataAccessor.getAuthorities(userTO.getUsername()).forEach(authority -> {
-                    user.getEntitlements().
-                            add(new Value(authority.getAuthority() + " on Realm(s) " + authority.getRealms()));
-                });
+                authDataAccessor.getAuthorities(userTO.getUsername()).forEach(authority -> user.getEntitlements().
+                        add(new Value(authority.getAuthority() + " on Realm(s) " + authority.getRealms())));
             }
 
             if (output(attributes, excludedAttributes, "roles")) {
-                userTO.getRoles().forEach(role -> {
-                    user.getRoles().add(new Value(role));
-                });
+                userTO.getRoles().forEach(role -> user.getRoles().add(new Value(role)));
             }
         }
 
         return user;
     }
 
-    private <E extends Enum<?>> void fill(
-            final Set<Attr> attrs,
-            final List<SCIMComplexConf<E>> confs,
-            final List<SCIMComplexValue> values) {
+    private static <E extends Enum<?>> void fill(
+        final Set<Attr> attrs,
+        final List<SCIMComplexConf<E>> confs,
+        final List<SCIMComplexValue> values) {
 
         values.forEach(value -> {
             if (value.getType() != null) {
@@ -522,30 +510,29 @@ public class SCIMDataBinder {
             fill(userTO.getPlainAttrs(), conf.getUserConf().getIms(), user.getIms());
             fill(userTO.getPlainAttrs(), conf.getUserConf().getPhotos(), user.getPhotos());
 
-            user.getAddresses().stream().filter(address -> address.getType() != null).forEach(address -> {
-                conf.getUserConf().getAddresses().stream().
-                        filter(object -> address.getType().equals(object.getType().name())).findFirst().
-                        ifPresent(addressConf -> {
-                            if (addressConf.getFormatted() != null && address.getFormatted() != null) {
-                                setAttribute(userTO, addressConf.getFormatted(), address.getFormatted());
-                            }
-                            if (addressConf.getStreetAddress() != null && address.getStreetAddress() != null) {
-                                setAttribute(userTO, addressConf.getStreetAddress(), address.getStreetAddress());
-                            }
-                            if (addressConf.getLocality() != null && address.getLocality() != null) {
-                                setAttribute(userTO, addressConf.getLocality(), address.getLocality());
-                            }
-                            if (addressConf.getRegion() != null && address.getRegion() != null) {
-                                setAttribute(userTO, addressConf.getRegion(), address.getRegion());
-                            }
-                            if (addressConf.getPostalCode() != null && address.getPostalCode() != null) {
-                                setAttribute(userTO, addressConf.getPostalCode(), address.getPostalCode());
-                            }
-                            if (addressConf.getCountry() != null && address.getCountry() != null) {
-                                setAttribute(userTO, addressConf.getCountry(), address.getCountry());
-                            }
-                        });
-            });
+            user.getAddresses().stream().filter(address -> address.getType() != null).
+                    forEach(address -> conf.getUserConf().getAddresses().stream().
+                    filter(object -> address.getType().equals(object.getType().name())).findFirst().
+                    ifPresent(addressConf -> {
+                        if (addressConf.getFormatted() != null && address.getFormatted() != null) {
+                            setAttribute(userTO, addressConf.getFormatted(), address.getFormatted());
+                        }
+                        if (addressConf.getStreetAddress() != null && address.getStreetAddress() != null) {
+                            setAttribute(userTO, addressConf.getStreetAddress(), address.getStreetAddress());
+                        }
+                        if (addressConf.getLocality() != null && address.getLocality() != null) {
+                            setAttribute(userTO, addressConf.getLocality(), address.getLocality());
+                        }
+                        if (addressConf.getRegion() != null && address.getRegion() != null) {
+                            setAttribute(userTO, addressConf.getRegion(), address.getRegion());
+                        }
+                        if (addressConf.getPostalCode() != null && address.getPostalCode() != null) {
+                            setAttribute(userTO, addressConf.getPostalCode(), address.getPostalCode());
+                        }
+                        if (addressConf.getCountry() != null && address.getCountry() != null) {
+                            setAttribute(userTO, addressConf.getCountry(), address.getCountry());
+                        }
+                    }));
 
             for (int i = 0; i < user.getX509Certificates().size(); i++) {
                 Value certificate = user.getX509Certificates().get(i);
@@ -614,7 +601,7 @@ public class SCIMDataBinder {
         return userCR;
     }
 
-    private void setAttribute(final UserTO userTO, final String schema, final String value) {
+    private static void setAttribute(final UserTO userTO, final String schema, final String value) {
         switch (schema) {
             case "username":
                 userTO.setUsername(value);
@@ -644,11 +631,11 @@ public class SCIMDataBinder {
 
         MembershipCond membCond = new MembershipCond();
         membCond.setGroup(groupTO.getKey());
-        SearchCond searchCond = SearchCond.getLeafCond(membCond);
+        SearchCond searchCond = SearchCond.getLeaf(membCond);
 
         if (output(attributes, excludedAttributes, "members")) {
             int count = userLogic.search(searchCond,
-                    1, 1, Collections.<OrderByClause>emptyList(),
+                    1, 1, List.of(),
                     SyncopeConstants.ROOT_REALM, false).getLeft();
 
             for (int page = 1; page <= (count / AnyDAO.DEFAULT_PAGE_SIZE) + 1; page++) {
@@ -656,23 +643,21 @@ public class SCIMDataBinder {
                         searchCond,
                         page,
                         AnyDAO.DEFAULT_PAGE_SIZE,
-                        Collections.<OrderByClause>emptyList(),
+                        List.of(),
                         SyncopeConstants.ROOT_REALM,
                         false).
                         getRight();
-                users.forEach(userTO -> {
-                    group.getMembers().add(new Member(
-                            userTO.getKey(),
-                            StringUtils.substringBefore(location, "/Groups") + "/Users/" + userTO.getKey(),
-                            userTO.getUsername()));
-                });
+                users.forEach(userTO -> group.getMembers().add(new Member(
+                        userTO.getKey(),
+                        StringUtils.substringBefore(location, "/Groups") + "/Users/" + userTO.getKey(),
+                        userTO.getUsername())));
             }
         }
 
         return group;
     }
 
-    public GroupTO toGroupTO(final SCIMGroup group) {
+    public static GroupTO toGroupTO(final SCIMGroup group) {
         if (!GROUP_SCHEMAS.equals(group.getSchemas())) {
             throw new BadRequestException(ErrorType.invalidValue);
         }
@@ -684,7 +669,7 @@ public class SCIMDataBinder {
         return groupTO;
     }
 
-    public GroupCR toGroupCR(final SCIMGroup group) {
+    public static GroupCR toGroupCR(final SCIMGroup group) {
         if (!GROUP_SCHEMAS.equals(group.getSchemas())) {
             throw new BadRequestException(ErrorType.invalidValue);
         }
