@@ -20,36 +20,25 @@ package org.apache.syncope.fit.core;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.ws.rs.core.Response;
-import org.apache.commons.lang3.SerializationUtils;
-import org.apache.syncope.client.console.commons.ConnIdSpecialName;
 import org.apache.syncope.client.lib.SyncopeClient;
 import org.apache.syncope.common.lib.SyncopeClientException;
 import org.apache.syncope.common.lib.request.AnyObjectCR;
-import org.apache.syncope.common.lib.request.GroupCR;
 import org.apache.syncope.common.lib.to.AnyObjectTO;
-import org.apache.syncope.common.lib.to.GroupTO;
 import org.apache.syncope.common.lib.to.ItemTO;
 import org.apache.syncope.common.lib.to.MappingTO;
 import org.apache.syncope.common.lib.to.OrgUnitTO;
-import org.apache.syncope.common.lib.to.PagedConnObjectTOResult;
 import org.apache.syncope.common.lib.to.ProvisionTO;
-import org.apache.syncope.common.lib.to.ResourceHistoryConfTO;
 import org.apache.syncope.common.lib.to.ResourceTO;
 import org.apache.syncope.common.lib.types.AnyTypeKind;
 import org.apache.syncope.common.lib.types.ClientExceptionType;
@@ -59,15 +48,15 @@ import org.apache.syncope.common.lib.types.EntityViolationType;
 import org.apache.syncope.common.lib.types.IdMImplementationType;
 import org.apache.syncope.common.lib.types.MappingPurpose;
 import org.apache.syncope.common.lib.types.TraceLevel;
-import org.apache.syncope.common.rest.api.beans.ConnObjectTOListQuery;
 import org.apache.syncope.common.rest.api.service.ResourceService;
 import org.identityconnectors.framework.common.objects.ObjectClass;
 import org.apache.syncope.fit.AbstractITCase;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 public class ResourceITCase extends AbstractITCase {
 
-    private ResourceTO buildResourceTO(final String resourceKey) {
+    private static ResourceTO buildResourceTO(final String resourceKey) {
         ResourceTO resourceTO = new ResourceTO();
 
         resourceTO.setKey(resourceKey);
@@ -169,7 +158,7 @@ public class ResourceITCase extends AbstractITCase {
         prop.setSchema(schema);
         prop.getValues().add("http://invalidurl/");
 
-        Set<ConnConfProperty> connectorConfigurationProperties = new HashSet<>(Arrays.asList(prop));
+        Set<ConnConfProperty> connectorConfigurationProperties = Set.of(prop);
         resourceTO.getConfOverride().addAll(connectorConfigurationProperties);
 
         Response response = resourceService.create(resourceTO);
@@ -416,22 +405,22 @@ public class ResourceITCase extends AbstractITCase {
         try {
             // create a new resource
             resource = createResource(resource);
-            assertNull(resource.getProvision("PRINTER").get().getSyncToken());
+            assertNull(resource.getProvision(PRINTER).get().getSyncToken());
 
             // create some object on the new resource
             anyObject = createAnyObject(anyObjectCR).getEntity();
 
             // update sync token
-            resourceService.setLatestSyncToken(resource.getKey(), "PRINTER");
+            resourceService.setLatestSyncToken(resource.getKey(), PRINTER);
 
             resource = resourceService.read(resource.getKey());
-            assertNotNull(resource.getProvision("PRINTER").get().getSyncToken());
+            assertNotNull(resource.getProvision(PRINTER).get().getSyncToken());
 
             // remove sync token
-            resourceService.removeSyncToken(resource.getKey(), "PRINTER");
+            resourceService.removeSyncToken(resource.getKey(), PRINTER);
 
             resource = resourceService.read(resource.getKey());
-            assertNull(resource.getProvision("PRINTER").get().getSyncToken());
+            assertNull(resource.getProvision(PRINTER).get().getSyncToken());
         } finally {
             if (anyObject != null) {
                 anyObjectService.delete(anyObject.getKey());
@@ -503,7 +492,7 @@ public class ResourceITCase extends AbstractITCase {
         List<ResourceTO> actuals = resourceService.list();
         assertNotNull(actuals);
         assertFalse(actuals.isEmpty());
-        actuals.forEach(resourceTO -> assertNotNull(resourceTO));
+        actuals.forEach(Assertions::assertNotNull);
     }
 
     @Test
@@ -515,96 +504,6 @@ public class ResourceITCase extends AbstractITCase {
         assertTrue(provision.isPresent());
         assertFalse(provision.get().getMapping().getItems().isEmpty());
         assertFalse(provision.get().getMapping().getLinkingItems().isEmpty());
-    }
-
-    @Test
-    public void listConnObjects() {
-        List<String> groupKeys = new ArrayList<>();
-        for (int i = 0; i < 10; i++) {
-            GroupCR groupCR = GroupITCase.getSample("group");
-            groupCR.getResources().add(RESOURCE_NAME_LDAP);
-            GroupTO group = createGroup(groupCR).getEntity();
-            groupKeys.add(group.getKey());
-        }
-
-        int totalRead = 0;
-        Set<String> read = new HashSet<>();
-        try {
-            ConnObjectTOListQuery.Builder builder = new ConnObjectTOListQuery.Builder().size(10);
-            PagedConnObjectTOResult list;
-            do {
-                list = null;
-
-                boolean succeeded = false;
-                // needed because ApacheDS seems to randomly fail when searching with cookie
-                for (int i = 0; i < 5 && !succeeded; i++) {
-                    try {
-                        list = resourceService.listConnObjects(
-                                RESOURCE_NAME_LDAP,
-                                AnyTypeKind.GROUP.name(),
-                                builder.build());
-                        succeeded = true;
-                    } catch (SyncopeClientException e) {
-                        assertEquals(ClientExceptionType.ConnectorException, e.getType());
-                    }
-                }
-                assertNotNull(list);
-
-                totalRead += list.getResult().size();
-                read.addAll(list.getResult().stream().
-                        map(input -> input.getAttr(ConnIdSpecialName.NAME).get().getValues().get(0)).
-                        collect(Collectors.toList()));
-
-                if (list.getPagedResultsCookie() != null) {
-                    builder.pagedResultsCookie(list.getPagedResultsCookie());
-                }
-            } while (list.getPagedResultsCookie() != null);
-
-            assertEquals(totalRead, read.size());
-            assertTrue(totalRead >= 10);
-        } finally {
-            groupKeys.forEach(key -> {
-                groupService.delete(key);
-            });
-        }
-    }
-
-    @Test
-    public void history() {
-        List<ResourceHistoryConfTO> history = resourceHistoryService.list(RESOURCE_NAME_LDAP);
-        assertNotNull(history);
-        int pre = history.size();
-
-        ResourceTO ldap = resourceService.read(RESOURCE_NAME_LDAP);
-        TraceLevel originalTraceLevel = SerializationUtils.clone(ldap.getUpdateTraceLevel());
-        assertEquals(TraceLevel.ALL, originalTraceLevel);
-        ProvisionTO originalProvision = SerializationUtils.clone(ldap.getProvision(AnyTypeKind.USER.name()).get());
-        assertEquals(ObjectClass.ACCOUNT_NAME, originalProvision.getObjectClass());
-        boolean originalFlag = ldap.isRandomPwdIfNotProvided();
-        assertTrue(originalFlag);
-
-        ldap.setUpdateTraceLevel(TraceLevel.FAILURES);
-        ldap.getProvision(AnyTypeKind.USER.name()).get().setObjectClass("ANOTHER");
-        ldap.setRandomPwdIfNotProvided(false);
-        resourceService.update(ldap);
-
-        ldap = resourceService.read(RESOURCE_NAME_LDAP);
-        assertNotEquals(originalTraceLevel, ldap.getUpdateTraceLevel());
-        assertNotEquals(
-                originalProvision.getObjectClass(), ldap.getProvision(AnyTypeKind.USER.name()).get().getObjectClass());
-        assertNotEquals(originalFlag, ldap.isRandomPwdIfNotProvided());
-
-        history = resourceHistoryService.list(RESOURCE_NAME_LDAP);
-        assertEquals(pre + 1, history.size());
-
-        resourceHistoryService.restore(history.get(0).getKey());
-
-        ldap = resourceService.read(RESOURCE_NAME_LDAP);
-        assertEquals(originalTraceLevel, ldap.getUpdateTraceLevel());
-        assertEquals(
-                originalProvision.getObjectClass(),
-                ldap.getProvision(AnyTypeKind.USER.name()).get().getObjectClass());
-        assertEquals(originalFlag, ldap.isRandomPwdIfNotProvided());
     }
 
     @Test
@@ -766,7 +665,7 @@ public class ResourceITCase extends AbstractITCase {
                 forEach(itemTO -> assertEquals(MappingPurpose.NONE, itemTO.getPurpose()));
     }
 
-    public void issueSYNCOPE645() {
+    public static void issueSYNCOPE645() {
         ResourceTO resource = new ResourceTO();
         resource.setKey("ws-target-resource-basic-save-invalid");
 
